# linkedin_bot

./: .env.example  .gitignore  README.md  connections.py  login.py  message.py  pyproject.toml  requirements.txt  setup.py
config/: personals.py  settings.py  text.py
linkedIn_follow/: __init__.py  __main__.py
linkedIn_follow/config/: settings.py  text.py
linkedIn_follow/modules/: clickers_and_finders.py  helpers.py  open_chrome.py  validator.py
linkedIn_follow/scripts/: __init__.py  connections.py  login.py  main.py  message.py
modules/: clickers_and_finders.py  helpers.py  open_chrome.py  validator.py
